# windows-detours

./: Cargo.toml  README.md  build.rs
src/: binary.rs  error.rs  ffi.rs  hook.rs  lib.rs  module.rs  process.rs  transaction.rs  util.rs
tests/: binary_test.rs  error_test.rs  hook_test.rs  module_test.rs  process_test.rs  util_test.rs
